GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.9.12:
	* Segfault fix for PPC/Alpha/etc machines with log(0)
	  Thanks to Todd Cohen for this one.

version 0.9.11:
	* <STRIKE>Strike Tag Support</STRIKE> :-)
	* Another memory leak fix
	* New .gaimrc format
	* Better support for multiple screen names
	* Font Properties
	* Saving of buddylist window position 
	* Fixed a problem with GAIM and Mozilla
	* New Sound Properties
	* More General Properties
	* Bigger Text-Entry field (Thanks to CrazyDavy for this one)
	* Various Random Bug fixes

version 0.9.10 (11/03/1999):
	* Fixed a nasty memory leak.  No more 40M GAIM processes. LOL
	* IDLE Times are displayed in a neater fashion.
 
version 0.9.9  (10/31/1999):
	* A little selection bug has been squished
	* Small memory leak fixed
	* Small network fix (problem with HTTP Proxy fixed?)
	* Proxy stuff should work now :)
	* Widget table support, dir info looks nicer
	* Info box looks nicer (thanks to Decklin Foster)
	* Client now 'corrects' time values from the server for accurate
          login times.
	* Lag-O-Meter (ala Drunken Jim)
	* IDLE Preferences

version 0.9.8  (10/04/1999):
	* HTTP Proxy Support (No SOCKS yet)
	* HTML Widget more robust
	* Graphical Debug Window
	* Buddylist bug fixed
	* Some logging fixes and improvements
	* configurable host/port selection
	* Clickable Links in buddy chat
	* New GAIM Logo 
	* Display Signon/Signoff messages in conversation windows 
	* Option to strip HTML from logged messages
	* GNOME cleanups (It might work now haha)
	* When viewing user info, URLS are converted to clickable links
	* Tooltips on URLS

version 0.9.7  (08/08/1999):
	* Preliminary Oscar Support
        * Fixed bad network bug
        * Fixed some bad text rendering bugs in the HTML widget
        * log all conversation names are now normalized.
        * Fixed another bad network bug :)
        * Multiple browser support, some Netscape buggies fixed.