@@ -670,6 +670,7 @@ void aol_icon(GdkWindow *w)
 	}
 	gdk_window_set_icon(w, NULL, icon_pm, icon_bm);
         gdk_window_set_group(w, mainwindow->window);
+	if (mainwindow) gdk_window_set_group(w, mainwindow->window);
 #endif
 }
 
